--- a/www/comps/calendar.css
+++ b/www/comps/calendar.css
@@ -8,7 +8,6 @@
 .calendar .form-wrap.popUp{
 	flex:1 1 auto;
 	width:100%;
-	z-index:var(--z-index-inline-pop-up-form);
 }
 .calendar .zoomSlider{
 	width:80px !important;
